--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
   text-align: center;
 }
 .text-rgb-shade{
-  width: 80px;
+  width: 30px;
   text-align: center;
 }
 .text-hex{
@@ -91,4 +91,9 @@
 .rgb-area-l, .hex-area-l{
   padding: 11px 0px;
   text-align : center ;
+}
+.btn-rgb{
+  width: 25px;
+  padding: 0;
+  text-align: center;
 }
